# alhazen-skill-examples

skills/biomed/alg-precision-therapeutics/: README.md  alg_precision_therapeutics.py
skills/biomed/apm/: SKILL.md  USAGE.md  apm.py  pyproject.toml
skills/biomed/epmc-search/: SKILL.md  USAGE.md  epmc_search.py  pyproject.toml
skills/biomed/rare-disease/: SKILL.md  USAGE.md  rare_disease.py  schema.tql  skill.yaml
skills/biomed/scientific-literature/: SKILL.md  USAGE.md  pyproject.toml  schema.tql  scientific_literature.py  skill.yaml
skills/demo/jobhunt/: SKILL.md  USAGE.md  job_forager.py  job_triage.py  jobhunt.py  pyproject.toml
skills/demo/jobhunt/dashboard/: lib.ts
skills/demo/techrecon/: USAGE.md  techrecon.py
