[project]
name = "alhazen-skill-apm"
version = "0.1.0"
description = "Algorithm for Precision Medicine skill for the Alhazen knowledge notebook framework"
requires-python = ">=3.11"
dependencies = [
    "typedb-driver>=3.8.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
dev-dependencies = []
