[project]
name = "alhazen-skill-epmc-search"
version = "0.1.0"
description = "Europe PMC literature search skill for the Alhazen knowledge notebook framework"
requires-python = ">=3.11"
dependencies = [
    "typedb-driver>=3.8.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
dev-dependencies = []
